# OpenWeaterClient-RUST

./: .env  .gitignore  Cargo.toml
src/: api.rs  main.rs
weatherlog/: 2022-06-1909:17:10.tsv  2022-06-1909:29:17.tsv  2022-06-1909:45:48.tsv  2022-06-1909:47:29.tsv  2022-06-1909:55:31.tsv  2022-06-1910:03:25.tsv
