[package]
name = "openweather-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#clap = { version = "3.1.15", features = ["derive"] }
csv = "1.1.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.137"
serde_json = "1.0.81"
dotenvy = "0.15.1"

tokio = { version = "1", features = ["full"] }
termion = "1.5.6"
viuer = "0.6.1"


[dependencies.chrono]
features = ["serde"]
version = "0.4"
